# ray

./: .gitignore  AGENTS.md  API.md  AUDIT_REMEDIATION_PLAN.md  README.md  biome.json  package.json  tsconfig.build.json  tsconfig.json
ray-rs/: .yarnrc.yml  CRATE_README.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  flamegraph-single_file.trace  index.d.ts  index.js  package-lock.json  package.json  pyproject.toml
ray-rs/.github/workflows/: CI.yml
ray-rs/__test__/: index.spec.ts  napi_method_bridge.spec.ts  replication_transport_auth.spec.ts  schema.spec.ts
ray-rs/benches/: concurrent.rs  graph.rs  single_file.rs
ray-rs/benchmark/: bench-fluent-vs-lowlevel.ts
ray-rs/examples/: fluent_query.py  replication_soak_bench.rs  single_file_raw_bench.rs  vector_ann_bench.rs
ray-rs/python/: PARITY_MATRIX.md  README.md
ray-rs/python/benchmarks/: benchmark_fluent.py  benchmark_single_file_raw.py
ray-rs/python/kitedb/: __init__.py  _kitedb.pyi  builders.py  fluent.py  traversal.py
ray-rs/python/raydb/: __init__.py  _raydb.pyi  builders.py  traversal.py
ray-rs/python/tests/: test_database.py  test_fluent.py
ray-rs/scripts/: open-close-vector-gate.sh  replication-soak-gate.sh  vector-ann-gate.sh  vector-ann-matrix.sh  vector-ann-pq-tuning.sh  vector-compaction-matrix.sh
ray-rs/src/: concurrent_tests.rs  constants.rs  error.rs  lib.rs  types.rs
ray-rs/src/api/: kite.rs  mod.rs  ray.rs  (+4 more)
ray-rs/tests/: replication_faults_phase_d.rs  replication_metrics_phase_d.rs  replication_phase_b.rs  replication_phase_d.rs
ray-rs/ts/: index.ts  replication_transport.ts  schema.ts
(+252 files in other folders)
