[package]
name = "raydb-core"
version = "0.1.0"
edition = "2021"
authors = ["RayDB Contributors"]
description = "High-performance embedded graph database"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# NAPI bindings
napi = { version = "3.0.0", features = ["napi8", "serde-json"] }
napi-derive = "3.0.0"

# Error handling
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Binary encoding
byteorder = "1.5"

# Hash functions
crc32fast = "1.4"
xxhash-rust = { version = "0.8", features = ["xxh64"] }

# Compression
zstd = "0.13"
flate2 = "1.1"

# Memory mapping
memmap2 = "0.9"

# Concurrency
parking_lot = "0.12"
crossbeam-channel = "0.5"
rayon = "1.10"

# Async runtime (optional)
tokio = { version = "1.45", features = ["rt", "fs", "sync"], optional = true }

# Collections
hashbrown = "0.15"
indexmap = "2.9"

# Ordered floats for heap operations
ordered-float = "5.0"

# Bitflags for snapshot flags
bitflags = "2.9"

# File locking
fs2 = "0.4"

# Random number generation (for k-means)
rand = "0.8"

# Unix-specific APIs (for directory sync)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs"] }

[build-dependencies]
napi-build = "2"

[dev-dependencies]
tempfile = "3.20"
criterion = "0.5"

[[bench]]
name = "distance"
harness = false

[features]
default = []
async = ["tokio"]

[profile.release]
lto = true
strip = "symbols"
codegen-units = 1

[profile.dev]
opt-level = 1
